# MeshChecker

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.ps1
src/: IntersectionResult.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Mesh.h  MeshChecker.cpp  MeshChecker.h  ObjLoader.cpp  ObjLoader.h  UvChecker.cpp  UvChecker.h  ViewerWidget.cpp  ViewerWidget.h  main.cpp  main_cli.cpp
